# spark-self-tuning-framework

./: .env_example  .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  config.py  pyproject.toml
resources/dataset/: lhs_initialization.json
resources/experiment_results/performance_model/: garralda_perf_model_result_N+C.txt  garralda_perf_model_result_N.txt  turbo_perf_model_result.txt  yoro_perf_model_result.txt
src/framework/experimental/dataset/: __init__.py  latin_hypercube_sampling.py
src/framework/proposed/: adaptive_optimization_framework.py
src/framework/proposed/bayesian_optimization/: __init__.py  acquisition_function.py  objective_function.py  performance_model.py  uncertainty_model.py
src/framework/proposed/metaheuristics/: __init__.py  iterated_local_search.py  tabu_search.py
src/framework/proposed/parameters/: __init__.py  spark_parameters.py
src/framework/proposed/safe_transfer_learning/: __init__.py  safe_transfer_learning.py
src/utils/spark/: hibench.py
src/utils/ssh/: __init__.py  ssh.py
src/utils/visualization/: plot_safe_transfer_learning.py  plots.py
src_resources/runners/historical_data/: __init__.py  characterization_ingestion_runner.py  lhs_generation_runner.py  lhs_spark_runner.py
src_resources/runners/optimization_models/: __init__.py  garralda_opt_model_runner.py  naive_bo_opt_model_runner.py  turbo_opt_model_runner.py  yoro_opt_model_runner.py
src_resources/runners/perfomance_models/: __init__.py  garralda_perf_model_runner.py  turbo_perf_model_runner.py  yoro_perf_model_runner.py
(+72 files in other folders)
