[project]
name = "Spark Self-Tuning Framework (STL-PARN–ILS–TS–BO)"
version = "0.1.0"
description = "A hybrid metaheuristics–Bayesian Optimization framework with safe transfer learning for continuous Spark tuning"
authors = [
    {name = "Mariano Garralda Barrio",email = "mariano.garralda@udc.es"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic (>=2.11.3,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "asyncssh (>=2.21.0,<3.0.0)",
    "paramiko (>=3.5.1,<4.0.0)",
    "numpy (>=1.26.4,<2.0.0)",
    "pymongo (>=4.13.0,<5.0.0)",
    "jsons (>=1.6.3,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "seaborn (==0.11)",
    "ptitprince (>=0.2.7,<0.3.0)",
    "matplotlib (==3.8)",
    "scipy-stubs (>=1.16.1.1,<2.0.0.0)",
    "catboost (>=1.2.8,<2.0.0)",

]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false